--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PhotoGallery</string>
+    <string name="bottom_bar_photo">Фото</string>
+    <string name="bottom_bar_collection">Коллекции</string>
 </resources>
