Пофиксил баг с загрузкой не по ID

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">3 angle gallery</string>
     <string name="bottom_bar_photo">Фото</string>
     <string name="bottom_bar_collection">Коллекции</string>
+    <string name="browse">Обзор</string>
 </resources>
